complete likelihood function for the mixture model

--- a/C3-L02.qmd
+++ b/C3-L02.qmd
@@ -114,6 +114,12 @@ plt.show()
 
 ## The Likelihood function :movie_camera: {#sec-likelihood-function}
 
+::: {.callout-important}
+### Likelihood functions for Mixture Models
+
+We will use the **complete data likelihood** extensively in this and the upcoming two courses. So I've made added the annotation and interpretation to the math. The almost ubiquitous use of the complete data likelihood is one of the main reasons why we use the hierarchical representation of the mixture model and is worth extra attention if you wish to fully comprehend the upcoming model of the specialization.
+:::
+
 
 - We are now moving on to **inferring the parameters** of the *mixture model* from the observed data.
 - We can estimate these using the maximum likelihood estimation or with Bayesian estimation.
@@ -121,7 +127,7 @@ plt.show()
 
 -   We can construct two different types of likelihood function:
     1.   the **observed data likelihood**, which just uses the original representation of the mixture model as a weighted sum, is the probability of observing the data given the parameters of the model.
-    2.  the **complete data likelihood** is the probability of observing the data and the latent variables given the parameters of the model. discuss what's called the complete data likelihood that relies on the hierarchical representation that we discussed in the previous lecture
+    2.  the **complete data likelihood** is the probability of observing the data and the latent variables given the parameters of the model. This is called the complete data likelihood, and it relies on the hierarchical representation from @sec-hierarchical-representation.
 
 ### Observed data likelihood {#sec-mixture-observed-data-likelihood}
 
@@ -129,9 +135,10 @@ plt.show()
 ![observed data likelihood](images/c3l01-ss-10-mixtures-observed-likelihood.png){#fig-observed-data-likelihood .column-margin width="53mm"} 
 
 
-Our assumption is that we have a set of observations $\mathbf{x} = (x_1, \ldots, x_n)$, which are independent and identically distributed (i.i.d.) samples from the mixture distribution. We can write this as:
 
-We model them using a mixture as we have seen before in @eq-mixture-marginal-cdf.
+Our assumption is that we have a set of observations $\mathbf{x} = (x_1, \ldots, x_n)$, which are independent and identically distributed (i.i.d.) samples from the mixture distribution.
+
+We model them using a mixture, such as we have seen in @eq-mixture-marginal-cdf.
 
 $$
 \mathbf{x}_i \sim f \qquad f(\mathbf{x} ) = \sum_{k=1}^K w_k \cdot g_k(x_i \mid \boldsymbol{\theta_k})
@@ -147,62 +154,89 @@ The likelihood function is proportional to the joint distribution so we can cons
 The observed data likelihood is the probability of observing the data given the parameters of the model
 
 $$
-\mathcal{L}(\boldsymbol{\omega},\boldsymbol{\theta} \mid  \mathbf{x}) = \prod_{i=1}^n \sum_{k=1}^K w_k \cdot g_k(x_i \mid \theta)
+\mathcal{L}(\boldsymbol{\omega},\boldsymbol{\theta} \mid  \mathbf{x}) = \prod_{i=1}^n \sum_{k=1}^K w_k \cdot g_k(x_i \mid \theta_k)
 $$ {#eq-observed-data-likelihood}
 
 - where 
   - $g_k(x_i \mid \theta)$ is the probability density function of the $k$-th component of the mixture, with 
   - $\boldsymbol{\omega}$ are the weights of the mixture components.
-  - $\boldsymbol{\theta}$ are the parameters of the components.
+  - $\boldsymbol{\theta_k}$ are the parameters of the components.
 
 We call this the **observed data likelihood** because we have already observed the data
 and so the parameters for this likelihood are the weights and the parameters of the components.
 
+
+::: {.callout-caution}
+### Why we don't use the observed data likelihood? {.unnumbered}
+
 Unfortunately, the observed data likelihood is not easy to work with because it involves a sum over the components of the mixture. 
 This is why we often use the **complete data likelihood** which is easier to work with.
+:::
 
 ### Complete data likelihood {#sec-mixture-complete-data-likelihood}
 
 ![complete data likelihood](images/c3l01-ss-11-mixtures-complete-data-likelihood.png){#fig-complete-data-likelihood .column-margin width="53mm"}
 
 
-we will now introduce the latent variable $C_i$ which indicates which component generated the observation $x_i$.
+
+we now introduce the latent variable $C_i$ which indicates which component generated the observation $x_i$.
 $$
 x_i \mid C_i \sim g_{C_i}(x_i \mid \theta_{C_i}) \qquad \mathbb{P}r(C_i=k) = w_k \qquad C_i \stackrel{i.i.d.}{\sim} \text{Categorical}(\boldsymbol{\omega})
-$$
+$$ 
 
 we can now introduce an indicator variable based on $C_i$ that indicates which component generated the observation $x_i$.
 
 $$
-\mathbb{1}_{(C_i=k)} = \begin{cases}
+\mathbb{I}_{(C_i=k)} = \begin{cases}
 1 & \text{if } C_i=k \\
 0 & \text{otherwise}
 \end{cases}
-$$
+$$ {#eq-mixture-indicator-variable}
+
+This reparametrization allows expressing the joint likelihood compactly over all possible latent assignments.
 
 $$
 \begin{split}
-\mathcal{L}(\boldsymbol{\omega},\boldsymbol{\theta}, \mathbf{C}) &= \prod_{i=1}^n \prod_{k=1}^K [\omega_k g_k(x_i)]^{\mathbb{1}_{(C_i=k)}}  \\
+\mathcal{L}(\boldsymbol{\omega},\boldsymbol{\theta}, \mathbf{C}) &= \prod_{i=1}^n \prod_{k=1}^K [\omega_k g_k(x_i)]^{\mathbb{I}_{(C_i=k)}}  \\
 &=
-\prod_{i=1}^n \prod_{k=1}^K [ g_k(x_i)]^{\mathbb{1}_{(C_i=k)}} 
-\prod_{i=1}^n \prod_{k=1}^K \omega_k ^{\mathbb{1}_{(C_i=k)}} \\
+\prod_{i=1}^n \prod_{k=1}^K [ g_k(x_i) ]^{\mathbb{I}_{(C_i=k)}} \cdot
+\prod_{i=1}^n \prod_{k=1}^K \omega_k ^{\mathbb{I}_{(C_i=k)}} \\
 &=
-\prod_{i=1}^n \prod_{k=1}^K [ g_k(x_i)]^{\mathbb{1}_{(C_i=k)}} 
-\prod_{k=1}^K \omega_k ^{\sum_{i=1}^n \mathbb{1}_{(C_i=k)}}
+\underbrace{
+  \prod_{i=1}^n \prod_{k=1}^K [ g_k(x_i) ]^{\mathbb{I}_{(C_i=k)}} 
+}_{\text{conditional likelihood}} \cdot
+\underbrace{
+\prod_{k=1}^K \omega_k ^{
+  \overbrace{\sum_{i=1}^n \mathbb{I}_{(C_i=k)}
+  }^{\text{no. observations in } C_k }}
+}_{\text{marginal likelihood of } C_k }
 \end{split}
-$$
+$$ {#eq-mixture-complete-data-likelihood}
 
-The last step is possible because the basis of this expression is the same for every $i$, allowing the right double product can also be written as a single product. 
-If we think about what the sum represents, the sum just represents the number of observations in the sample that belong to up to component k. 
-So that provides a very nice break, and a very nice interpretation for the likelihood function, and for a complete data likelihood function. 
-You have one piece of the likelihood function that corresponds to the distribution of the observations.
+- The left hand term corresponds to the conditional likelihood: $p(x_i \mid C_i, \theta_{C_i})$.
+- The right hand term is the marginal likelihood of the latent variables: $p(C_i \mid \boldsymbol{\omega})$.
 
-Basically, if you know what component generated each observation, you just use the density of that component in this product. 
-So this simplifies this expression substantially. You are going for each $i$. to retain one of the key terms that corresponds to the exponent that is equal to one. Then, you have a second term that corresponds to this product of the weights. In every case, the weight is going to be raised to essentially the number of observations, that belong to that component.
+**How did we get the sum in the exponent of the second term?**
 
+In the last step it is possible to replace one of the product on the right hand side with a sum inside the power because the basis of this expression is the same i.e. $\omega_i$ for every $i$. And an exponent is just a shorthand for product with the same base.
 
+**What does the the sum represents? **
 
-This allows us to write the complete data likelihood as a product of the likelihoods of the individual components, weighted by their respective weights.
+[We can see it's just the number of observations in the sample that belong to up to component k. ]{.mark}
+
+**How can we interpret this form of the likelihood function?**
+
+That provides a very nice break, and a very nice interpretation for the likelihood function, and for a complete data likelihood function.
+[We have one piece of the likelihood function that corresponds to the distribution of the observations.]{.mark}
+
+Basically, if we know what component generated each observation, we use the density of that component in this product, which simplifies this expression substantially.
+
+We are going to retain for each $i$ one of the key terms that corresponds to the exponent that is equal to one.
+[Then, we have a second term that corresponds to this product of the weights. ]{.mark}
+In every case, the weight is going to be raised to essentially the number of observations, that belong to that component.
+
+This allows us to write the complete data likelihood as a product of the likelihoods of the individual components, weighted by their respective weights. This formulation is conjugate-friendly and facilitates both Gibbs sampling and the E-step in the EM algorithm
+
 
 
 ## Parameter identifiability :movie_camera: {#sec-parameter-identifiability}
