--- a/C3-L06.qmd
+++ b/C3-L06.qmd
@@ -26,7 +26,7 @@ keywords:
 
 \index{mixture!clustering}
 \index{clustering}
-Clustering, or unsupervised classification, aims to partition heterogeneous data into homogeneous groups (clusters). Common in biology and other domains, clustering helps identify underlying structure, such as species based on physiological features.
+Clustering, aims to partition heterogeneous data into homogeneous groups (clusters). Common in biology and other domains, clustering helps identify underlying structure, such as species based on physiological features.
 
 A widely-used method is **K-means clustering**, which:
 
