--- a/C3-L02.qmd
+++ b/C3-L02.qmd
@@ -17,7 +17,7 @@ keywords:
 ![simulation of a mixture](images/c3l01-ss-09-mixture-simulation.png){#fig-simulation-of-a-mixture .column-margin width="53mm"}
 
 
-Recall that the cumulative distribution function of a mixture takes the form @eq-finite-mixture-cdf, where $G_k(x)$ is the cumulative distribution function of the $k$-th component of the mixture. 
+Recall that the cumulative distribution function of a mixture takes the form @eq-finite-mixture-cdf, where $G_k(x)$ is the cumulative distribution function of the $k$^-th^ component of the mixture. 
 
 We can use a RV for each component and introduce an indicator RV for  the component selector $C_i$ to select the component from which we will sample. This results in a hierarchical representation of the mixture model.
 
@@ -25,7 +25,7 @@ $$
 X \mid c \sim g_c(x) \qquad \mathbb{P}r(c=k) = \omega_k \qquad
 $$ {#eq-finite-mixture-cdf-hierarchical}
 
-where $C$ is a categorical random variable with $K$ categories, and $G_k(x \mid C=k)$ is the cumulative distribution function of the $k$-th component of the mixture given that we have selected the $k$-th component.
+where $C$ is a categorical random variable with $K$ categories, and $G_k(x \mid C=k)$ is the cumulative distribution function of the $k$^-th^ component of the mixture given that we have selected the $k$^-th^ component.
 
 This allows us to write the cumulative distribution function of the mixture as a weighted sum of the cumulative distribution functions of the components 
 
@@ -158,7 +158,7 @@ $$
 $$ {#eq-observed-data-likelihood}
 
 - where 
-  - $g_k(x_i \mid \theta)$ is the probability density function of the $k$-th component of the mixture, with 
+  - $g_k(x_i \mid \theta)$ is the probability density function of the $k$^-th^ component of the mixture, with 
   - $\boldsymbol{\omega}$ are the weights of the mixture components.
   - $\boldsymbol{\theta_k}$ are the parameters of the components.
 
