--- a/C3-L03.qmd
+++ b/C3-L03.qmd
@@ -104,7 +104,7 @@ $$
 \mathbb{P}r(c_i=k \mid \omega, \theta, x_i) = \frac{\omega_k g_k(x_i \mid \theta_k)}{\sum_{j=1}^{K} \omega_j g_j(x_i \mid \theta_j)}= v_{ik}(\omega, \theta)
 $$
 
-where the value of $v_{ik}$ is interpreted as the probability that the $i$-th observation comes from the $k$-th component of the mixture assuming the population parameters $\omega$ and $\theta$.
+where the value of $v_{ik}$ is interpreted as the probability that the $i$^-th^ observation comes from the $k$^-th^ component of the mixture assuming the population parameters $\omega$ and $\theta$.
 
 ## EM for location Mixture of Gaussians  :movie_camera:   {#sec-em-for-location-mixtures-of-gaussians}
 
