--- a/C3-L05.qmd
+++ b/C3-L05.qmd
@@ -53,7 +53,7 @@ $$
 X_1, \ldots, X_n \sim f(x) = \sum_{k=1}^K w_k g(x \mid \hat{\theta}_k)
 $$ {#eq-mixture-density-estimation}
 
-where $w_k$ is the weight of the $k$-th component, $\hat{\theta}_k$ is the location and scale of the $k$-th component, and $g(x \mid \hat{\theta}_k)$ is the kernel function centered at $\hat{\theta}_k$. The weights are non-negative and sum to 1.
+where $w_k$ is the weight of the $k$^-th^ component, $\hat{\theta}_k$ is the location and scale of the $k$^-th^ component, and $g(x \mid \hat{\theta}_k)$ is the kernel function centered at $\hat{\theta}_k$. The weights are non-negative and sum to 1.
 
 Example: a location mixture of K Gaussian distributions is given by:
 
@@ -61,7 +61,7 @@ $$
 X_1, \ldots, X_n \sim \hat{f}(x) = \sum_{k=1}^K \hat{w}_k \frac{1}{\sqrt{2\pi}\hat{\sigma}} \exp^{-\frac{(x - \hat{\mu}_k)^2}{2\hat{\sigma}^2}}
 $$ {#eq-mixture-density-estimation-gaussian-location}
 
-where $\hat{w}_k$ is the weight of the $k$-th component, $\hat{\mu}_k$ is the mean of the $k$-th component, and $\hat{\sigma}$ is the standard deviation of the $k$-th component.
+where $\hat{w}_k$ is the weight of the $k$^-th^ component, $\hat{\mu}_k$ is the mean of the $k$^-th^ component, and $\hat{\sigma}$ is the standard deviation of the $k$^-th^ component.
 
 we can see the the two methods are quite similar, but the mixture model is more flexible and can capture more complex shapes in the data. 
 
