--- a/C4-L04.qmd
+++ b/C4-L04.qmd
@@ -709,7 +709,7 @@ $$
 f_t(h) = E(y_{t+h} \mid y_{1:t}) = F^\top G^h x_t, \quad h > 0, \quad \forall t \ge p
 $$ {#eq-ar-p-forecast-function}
 
-Where $G^h$ is the $h$-th power of the matrix $G$.
+Where $G^h$ is the $h$^-th^ power of the matrix $G$.
 The eigenvalues of the matrix $G$ are the reciprocal roots of the characteristic polynomial.
 
 ::: {.callout-note}
