--- a/C4-L06.qmd
+++ b/C4-L06.qmd
@@ -501,9 +501,9 @@ $$
 \end{aligned}
 $$ {#eq-second-order-poly-Gh}
 
-### General p-th order polynomial model 
+### General p^-th^ order polynomial model 
 
-We can consider a so called p-th order polynomial model. This model will have a state-space vector of dimension p and a polynomial of order $p − 1$ forecast function on $h$. The model can be written as
+We can consider a so called p^-th^ order polynomial model. This model will have a state-space vector of dimension p and a polynomial of order $p − 1$ forecast function on $h$. The model can be written as
 
 $$
 \{E_p, J_p(1), v_t, W_t\}
@@ -666,9 +666,9 @@ $$
 \{E_2, J_2(1), \cdot, \cdot\}
 $$
 
-#### General $p$-th Order Polynomial Model
+#### General $p$^-th^ Order Polynomial Model
 
-We can consider a $p$-th order polynomial model. This model will have a state-space vector of dimension $p$ and a polynomial of order $p-1$ forecast function on $h$. The model can be written as 
+We can consider a $p$^-th^ order polynomial model. This model will have a state-space vector of dimension $p$ and a polynomial of order $p-1$ forecast function on $h$. The model can be written as 
 
 $$\{E_p, J_p(1), v_t, W_t\}  \qquad \text{(short notation)}
 $$
