--- a/c03-mixtures/m2-em/em-2-norm-mix/index.qmd
+++ b/c03-mixtures/m2-em/em-2-norm-mix/index.qmd
@@ -15,7 +15,7 @@ x_i &\sim \sum_{k=1}^{KK} w_k \mathcal{N}(\mu_k, \sigma^2) \\
 \end{aligned}
 $$ {#eq-location-mixture-model}
 
-where $x_i$ is the $i$-th observation, $K$ is the number of components, $w_k$ are the weights associated with each component, $\mu_k$ are the means of the components, and $\sigma^2$ is the common variance of all components.
+where $x_i$ is the $i$^-th^ observation, $K$ is the number of components, $w_k$ are the weights associated with each component, $\mu_k$ are the means of the components, and $\sigma^2$ is the common variance of all components.
 
 
 ## Simulating synthetic data
@@ -94,7 +94,7 @@ The algorithm is implemented in the following steps:
   \mathbb{P}r(c_i=k \mid x_i, \omega, \theta) = \frac{\omega_k g_k(x_i \mid \theta_k)}{\sum_{j=1}^{K} \omega_j g_j(x_i \mid \theta_j)}= v_{ik}(\omega, \theta)
   $$
 
-  where the value of $v_{ik}$ is interpreted as the probability that the $i$-th observation comes from the $k$-th component of the mixture assuming the population parameters $\omega$ and $\theta$.
+  where the value of $v_{ik}$ is interpreted as the probability that the $i$^-th^ observation comes from the $k$^-th^ component of the mixture assuming the population parameters $\omega$ and $\theta$.
 
   The M-step consists of updating the parameters of the model by maximizing the expected log-likelihood function with respect to the parameters. This is done by taking the derivative of the expected log-likelihood function with respect to each parameter and setting it to zero.
 
