--- a/c03-mixtures/m2-em/em-exp-lognormal-mix/index.qmd
+++ b/c03-mixtures/m2-em/em-exp-lognormal-mix/index.qmd
@@ -47,7 +47,7 @@ $$
 \end{aligned}
 $$ {#eq-complete}
 
-where $(v_{i,1})$ and $(v_{i,2})$ are the *responsibilities* of the two components for the $i$-th observation.
+where $(v_{i,1})$ and $(v_{i,2})$ are the *responsibilities* of the two components for the $i$^-th^ observation.
 
 Computing the derivatives and setting them to zero yields
 
