--- a/mixture-math.qmd
+++ b/mixture-math.qmd
@@ -14,7 +14,7 @@ $$
 F(x) = \sum_{k=1}^K \omega_k G_k(x)
 $$ {#eq-mixture-cdf}
 
-where $G_k(x)$ is the CDF of the $k$-th component distribution and $\omega_k$ is the weight for the $k$-th component.
+where $G_k(x)$ is the CDF of the $k$^-th^ component distribution and $\omega_k$ is the weight for the $k$^-th^ component.
 
 2. Mixture Model (PDF/PMF):
 
@@ -24,7 +24,7 @@ $$
 f(x) = \sum_{k=1}^K \omega_k g_k(x)
 $$ {#eq-mixture-pdf}
 
-where $g_k(x)$ is the PDF/PMF of the $k$-th component distribution and $\omega_k$ is the weight for the $k$-th component.
+where $g_k(x)$ is the PDF/PMF of the $k$^-th^ component distribution and $\omega_k$ is the weight for the $k$^-th^ component.
 
 3. Example: Exponential Mixture CDF:
 
@@ -137,7 +137,7 @@ $$
 X \mid c \sim G_c, \quad \mathbb{P}r(c = k) = \omega_k
 $$ {#eq-hierarchical-mixture}
 
-where $G_c$ is the distribution of the $k$-th component and $\omega_k$ is the weight for the $k$-th component.
+where $G_c$ is the distribution of the $k$^-th^ component and $\omega_k$ is the weight for the $k$^-th^ component.
 
 ### 1.4 The likelihood function for mixture models
 
@@ -147,7 +147,7 @@ $$
 L_O(\theta, \omega; x) \propto \mathbb{P}r(x \mid \theta, \omega) = \prod_{i=1}^n \sum_{k=1}^K \omega_k g_k(x_i \mid \theta_k)
 $$ {#eq-observed-data-likelihood}
 
-where $g_k(x_i \mid \theta_k)$ is the PDF/PMF of the $k$-th component distribution evaluated at $x_i$ with parameter $\theta_k$.
+where $g_k(x_i \mid \theta_k)$ is the PDF/PMF of the $k$^-th^ component distribution evaluated at $x_i$ with parameter $\theta_k$.
 
 16. Mixture Model (Likelihood, complete-data):
 
@@ -237,7 +237,7 @@ $$
 \mathbb{P}r(c_i = k \mid \omega, \theta, x) = \frac{\omega_k g_k(x_i \mid \theta_k)}{\sum_{l=1}^K \omega_l g_l(x_i \mid \theta_l)} = v_{i,k}(\omega, \theta)
 $$ {#eq-conditional-independence-of-components}
 
-where $v_{i,k}(\omega, \theta)$ is the posterior probability of the $k$-th component given the observed data $x_i$ and the current estimates of the parameters $\omega$ and $\theta$.
+where $v_{i,k}(\omega, \theta)$ is the posterior probability of the $k$^-th^ component given the observed data $x_i$ and the current estimates of the parameters $\omega$ and $\theta$.
 
 and $(\hat{\omega}^{(t+1)}, \hat{\theta}^{(t+1)})$ are the updated estimates of the parameters after the M step.
 
@@ -259,7 +259,7 @@ $$
 \mathbb{P}r(c_i = k \mid \omega, \theta, x) = \frac{\omega_k g_k(x_i \mid \theta_k)}{\sum_{l=1}^K \omega_l g_l(x_i \mid \theta_l)} = v_{i,k}(\omega, \theta)
 $$ {#eq-conditional-independence-of-components}
 
-where $v_{i,k}(\omega, \theta)$ is the posterior probability of the $k$-th component given the observed data $x_i$ and the current estimates of the parameters $\omega$ and $\theta$.
+where $v_{i,k}(\omega, \theta)$ is the posterior probability of the $k$^-th^ component given the observed data $x_i$ and the current estimates of the parameters $\omega$ and $\theta$.
 
 which implies that 
 
@@ -276,14 +276,14 @@ $$
 Q(\omega, \theta \mid \hat{\omega}^{(t)}, \hat{\theta}^{(t)}, x) = \sum_{i=1}^n \sum_{k=1}^K v_{i,k} \mathbb{E}_{c \mid \hat{\omega}^{(t)}, \hat{\theta}^{(t)}, x} \left [\mathbb{1}_{(c_i=k)} \log(\omega_k) + \log(g_k(x_i \mid \theta_k))\right]
 $$ {#eq-em-Q-function}
 
-where $v_{i,k}(\omega^{(t)}, \theta^{(t)})$ is the posterior probability of the $k$-th component given the observed data $x_i$ and the current estimates of the parameters $\omega^{(t)}$ and $\theta^{(t)}$.
+where $v_{i,k}(\omega^{(t)}, \theta^{(t)})$ is the posterior probability of the $k$^-th^ component given the observed data $x_i$ and the current estimates of the parameters $\omega^{(t)}$ and $\theta^{(t)}$.
 
 and therefore
 $$
 Q(\omega, \theta \mid \hat{\omega}^{(t)}, \hat{\theta}^{(t)}, x) = \sum_{i=1}^n \sum_{k=1}^K v_{i,k}^{(t+1)}\left(\hat{\omega}^{(t)}, \hat{\theta}^{(t)}\right) [\log(\omega_k) + \log(g_k(x_i \mid \theta_k))]
 $$ {#eq-em-Q-function}
 
-where $v_{i,k}(\hat{\omega}^{(t)}, \hat{\theta}^{(t)})$ is the posterior probability of the $k$-th component given the observed data $x_i$ and the current estimates of the parameters $\hat{\omega}^{(t)}$ and $\hat{\theta}^{(t)}$.
+where $v_{i,k}(\hat{\omega}^{(t)}, \hat{\theta}^{(t)})$ is the posterior probability of the $k$^-th^ component given the observed data $x_i$ and the current estimates of the parameters $\hat{\omega}^{(t)}$ and $\hat{\theta}^{(t)}$.
 
 (Remember that the term that is constant with respect to c can come out of the expectation, and that the expected value of an indicator function is just the probability of the event inside the indicator). 
 
@@ -396,7 +396,7 @@ f(x) =
 \right\}
 $$ {#eq-general-location-scale-mixture}
 
-where $\theta_k$ is the mean of the $k$-th component, $\Sigma_k$ is the covariance matrix of the $k$-th component, and $\omega_k$ is the weight for the $k$-th component.
+where $\theta_k$ is the mean of the $k$^-th^ component, $\Sigma_k$ is the covariance matrix of the $k$^-th^ component, and $\omega_k$ is the weight for the $k$^-th^ component.
 $$
 \begin{aligned}
 v_{i,k}^{(t+1)} &= \frac{\omega_k^{(t)} |\Sigma_k^{(t)}|^{-1/2} \exp\left\{-\frac{1}{2}(x_i - \mu_k^{(t)})^T [\Sigma_k^{(t)}]^{-1}(x_i - \mu_k^{(t)})\right\}}{\sum_{l=1}^K \omega_l^{(t)} |\Sigma_l^{(t)}|^{-1/2} \exp\left\{-\frac{1}{2}(x_i - \mu_l^{(t)})^T [\Sigma_l^{(t)}]^{-1}(x_i - \mu_l^{(t)})\right\}} \\
@@ -406,7 +406,7 @@ v_{i,k}^{(t+1)} &= \frac{\omega_k^{(t)} |\Sigma_k^{(t)}|^{-1/2} \exp\left\{-\fra
 \end{aligned}
 $$ {#eq-em-p-variate-mixture-parameters}
 
-where $v_{i,k}^{(t+1)}$ is the posterior probability of the $k$-th component given the observed data $x_i$ and the current estimates of the parameters $\omega^{(t)}$, $\mu^{(t)}$, and $\Sigma^{(t)}$.
+where $v_{i,k}^{(t+1)}$ is the posterior probability of the $k$^-th^ component given the observed data $x_i$ and the current estimates of the parameters $\omega^{(t)}$, $\mu^{(t)}$, and $\Sigma^{(t)}$.
 
 
 ## 3. MCMC
@@ -415,7 +415,7 @@ $$
 f(x) = \sum_{k=1}^K \omega_k g_k(x | \theta_k)
 $$ {#eq-mcmc-mixture}
 
-where $g_k(x \mid \theta_k)$ is the PDF/PMF of the $k$-th component distribution evaluated at $x$ with parameter $\theta_k$.
+where $g_k(x \mid \theta_k)$ is the PDF/PMF of the $k$^-th^ component distribution evaluated at $x$ with parameter $\theta_k$.
 
 $$
 \mathbb{P}r(\omega) \;=\;
