--- a/tasks/todo.qmd
+++ b/tasks/todo.qmd
@@ -54,3 +54,14 @@ where l1 is the lesson number and g1 is the goal number.
 
 - [x] add more books on mixtures in A12.qmd
 - [ ] non parametric methods - gaussian processes.
+
+
+## Probability and statistics
+
+- the likelihood principle
+- de Finetti theorem and extensions
+- the complete class theorem
+- the method of moments
+- GHK algorithm (importance sampling)
+
+
