--- a/C6-L00.qmd
+++ b/C6-L00.qmd
@@ -11,7 +11,6 @@ keywords:
 
 # Bayesian Non-Parametric Models
 
-
 Here is a question I raised in my Feynman Notebook:
 
 1. Will we learn about Gaussian Processes/Neural Networks in this course?
@@ -51,11 +50,11 @@ This is not available as a course on Coursera and isn't a part of the specializa
   - four Analysis
 - There are five modules in this course:
   1. **Gaussian Processes for Regression**: We will focus on Gaussian processes as a flexible prior distribution for regression problems, allowing us to capture complex relationships in the data.
-     1.1 Gaussian process model [slides](https://tamarabroderick.com/files/broderick_2024_cps-fr_part_i.pdf)
-     1.2 Gaussian process regression [slides](https://tamarabroderick.com/files/broderick_2024_cps-fr_part_ii.pdf)
-     1.3 Squared exponential kernel and observation noise [slides](https://tamarabroderick.com/files/broderick_2024_cps-fr_part_iii.pdf)
-     1.4 What uncertainty are we quantifying? [slides](https://tamarabroderick.com/files/broderick_2024_cps-fr_part_iv.pdf)
-     1.5 A list of resources: [slide](https://tamarabroderick.com/files/broderick_2024_cps-fr_resources.pdf)
+      1. Gaussian process model [slides](https://tamarabroderick.com/files/broderick_2024_cps-fr_part_i.pdf)
+      2. Gaussian process regression [slides](https://tamarabroderick.com/files/broderick_2024_cps-fr_part_ii.pdf)
+      3. Squared exponential kernel and observation noise [slides](https://tamarabroderick.com/files/broderick_2024_cps-fr_part_iii.pdf)
+      4. What uncertainty are we quantifying? [slides](https://tamarabroderick.com/files/broderick_2024_cps-fr_part_iv.pdf)
+      5. A list of resources: [slide](https://tamarabroderick.com/files/broderick_2024_cps-fr_resources.pdf)
   2. **Dirichlet process**: We will explore the Dirichlet process as a prior distribution over probability measures, allowing for flexible modeling of unknown distributions.
   3. **Chinese restaurant process**: We will introduce the Chinese restaurant process as a metaphor for the Dirichlet process, providing an intuitive understanding of how it works.
   4. **The peer reviewed data analysis project**: We will develop the model and then evaluate other students' models.
