--- a/C6-L00.qmd
+++ b/C6-L00.qmd
@@ -35,20 +35,9 @@ This is not available as a course on Coursera and isn't a part of the specializa
   - [x] Explain essential concepts in Bayesian statistics.
   - [x] Apply what you know to real-world data.
 - We will build the following skills:
-  - Probability Distribution
-  - R Programming
-  - Time Series Analysis and Forecasting
-  - Statistical Modeling
-  - Predictive Modeling
-  - Advanced Analytics
+  - Probability Distribution (Dirichlet, Beta)
   - Bayesian Statistics
-  - Sampling (Statistics)
-  - Statistical Methods
-  - Data Analysis
-  - Technical Communication
-  - Markov Model
-  - four Analysis
-- There are five modules in this course:
+- There are currently five modules planned in this course:
   1. **Gaussian Processes for Regression**: We will focus on Gaussian processes as a flexible prior distribution for regression problems, allowing us to capture complex relationships in the data.
       1. Gaussian process model [slides](https://tamarabroderick.com/files/broderick_2024_cps-fr_part_i.pdf)
       2. Gaussian process regression [slides](https://tamarabroderick.com/files/broderick_2024_cps-fr_part_ii.pdf)
