--- a/C1-L02.qmd
+++ b/C1-L02.qmd
@@ -10,7 +10,6 @@ keywords:
   - Bayes' theorem
 ---
 
-## Bayes' Theorem {#sec-bayes-theorem}
 
 ```{python}
 #| echo: false
@@ -89,7 +88,8 @@ This can be derived from the conditional probability equation.
 
 ### Inverting Conditional Probabilities
 
-If we don't know $\mathbb{P}r(A \mid B)$ but we do know the inverse probability $\mathbb{P}r(B \mid A)$ is. We can then rewrite $\mathbb{P}r(A \mid B)$ in terms of $\mathbb{P}r(B \mid A)$
+If we don't know $\mathbb{P}r(A \mid B)$ but we do know the inverse probability $\mathbb{P}r(B \mid A)$ is. 
+We can then rewrite $\mathbb{P}r(A \mid B)$ in terms of $\mathbb{P}r(B \mid A)$
 
 $$
 \mathbb{P}r(A \mid B) = \frac{\mathbb{P}r(B \mid A)\mathbb{P}r(A)}{\mathbb{P}r(B \mid A)\mathbb{P}r(A) + \mathbb{P}r(B \mid A^c)\mathbb{P}r(A^c)}
@@ -107,9 +107,14 @@ $$ {#eq-bayes-rule}
 :::
 ::::
 
-Let's look at an example of an early test for HIV antibodies known as the ELISA test. - The test has a true positive rate of 0.977. - It has a true negative rate of 0.926. - The incidence of HIV in North America is .0026.
+Let's look at an example of an early test for HIV antibodies known as:
 
-Now we want to know the probability of an individual having the disease given that they tested positive $\mathbb{P}r(HIV | +)$.
+- the ELISA test. 
+  - The test has a true positive rate of 0.977. 
+  - It has a true negative rate of 0.926. 
+- The incidence of HIV in North America is .0026.
+
+Now we want to know the probability of an individual having the disease given that they tested positive $\mathbb{P}r(\text{HIV} \mid +)$.
 
 This is the inverse probability of the true positive, so we will need to use Bayes' theorem.
 
@@ -118,13 +123,18 @@ We start by encoding the above using mathematical notation, so we know what to s
 The true positive rate is:
 
 $$
-\mathbb{P}r(+ \mid HIV) = 0.977
+\mathbb{P}r(+ \mid \text{HIV}) = 0.977
 $$
 
 The true negative rate is:
 
 $$
-\mathbb{P}r(- \mid NO\_HIV) = 0.926
+\mathbb{P}r(- \mid \text{HIV}) = 0.926
+$$
+
+The false positive rate is:
+$$
+\mathbb{P}r(- \mid \text{NO HIV}) = 0.926
 $$
 
 The probability of someone in North America having this disease was
@@ -133,17 +143,19 @@ $$
 \mathbb{P}r(HIV) = .0026
 $$
 
-what we want is: $\mathbb{P}r(HIV \mid +)$
+what we want is: $\mathbb{P}r(\text{HIV} \mid +)$
 
 $$
 \begin{aligned}
-\mathbb{P}r(HIV \mid +) &= \frac{\mathbb{P}r(+ \mid HIV)\mathbb{P}r(HIV)}{\mathbb{P}r(+ \mid HIV)\mathbb{P}r(HIV) + \mathbb{P}r(+ \mid NO\_HIV){\mathbb{P}r(NO\_HIV)}}  \\ 
+\mathbb{P}r(\text{HIV} \mid +) &= \frac{\mathbb{P}r(+ \mid \text{HIV})\mathbb{P}r(\text{HIV})}{\mathbb{P}r(+ \mid \text{HIV})\mathbb{P}r(\text{HIV}) + \mathbb{P}r(+ \mid \text{NO HIV})\mathbb{P}r(\text{NO HIV})}  \\ 
 &= \frac{(.977)(.0026)}{(.977)(.0026) + (1-.977)(1-.0026)}  \\ 
 &=  0.033 
 \end{aligned}
 $$ {#eq-bayes-hiv}
 
-This is a bit of a **surprise** - although the test has 90% + true and false accuracy - taking it once is only valid 3% of the time. How is this possible?
+- This is a bit of a **surprise** 
+  - although the test has 90% + true and false accuracy 
+  - taking it once is only valid 3% of the time. How is this possible?
 
 What happens in Bayes law is that we are updating probabilities. And since we started with such a low probability of .0026, Bayesian updating only brings it up to 0.03.
 
@@ -155,7 +167,7 @@ $$ {#eq-bayes-law-multiple-events}
 :::
 
 
-Note: (@McElreath2020Rethinking) discusses how this can be presented less surprisingly.
+Note in [@McElreath2020Rethinking] the author, discusses how this and similar concepts can be presented in a fashion that seems less surprisingly to the lay person. He suggests that we can think of the test as a **filter** that filters out most of the people who do not have the disease, but it is not perfect.
 
 ## Bayes' theorem  :movie_camera:  {#sec-bayes-theorem-video}
 
@@ -184,11 +196,37 @@ $$
 $$
 \begin{aligned}
 {\color{orange} \overbrace{\color{orange} \mathbb{P}r(H|E)}^{\text{Posterior}}} &= \frac{  {\color{pink} \overbrace{\color{pink} \mathbb{P}r(H \cap E)}^{\text{Joint}}}  } {  {\color{green} \underbrace{{\color{green} \mathbb{P}r(\text{E})}}_{\text{Marginal Evidence}}} } \\ 
-&= \frac{  {\color{red} \overbrace{\color{red} P (\text{H})}^{\text{Prior}}} \cdot  {\color{blue} \overbrace{\color{blue} P (E \mid H)}^{\text{Likelihood}}} } { {\color{green} \underbrace{{\color{green} \mathbb{P}r(E)}}_{\text{Marginal Evidence}}} } \\ 
-&= \frac{  {\color{red} \overbrace{\color{red} P (H)}^{\text{Prior}}} \cdot {\color{blue} \overbrace{\color{blue} P (E \mid H)}^{\text{Likelihood}}} }{  {\color{green} \underbrace{\color{green} \mathbb{P}r(E \mid H) \mathbb{P}r(H) + \mathbb{P}r(E \mid H^c) \mathbb{P}r(H^c)  }_{\text{Marginal Evidence}}}}
+&= \frac{  {\color{red} \overbrace{\color{red} \mathbb{P}r  (\text{H})}^{\text{Prior}}} \cdot  {\color{blue} \overbrace{\color{blue} \mathbb{P}r  (E \mid H)}^{\text{Likelihood}}} } { {\color{green} \underbrace{{\color{green} \mathbb{P}r(E)}}_{\text{Marginal Evidence}}} } \\ 
+&= \frac{  {\color{red} \overbrace{\color{red} \mathbb{P}r  (H)}^{\text{Prior}}} \cdot {\color{blue} \overbrace{\color{blue} \mathbb{P}r  (E \mid H)}^{\text{Likelihood}}} }{  {\color{green} \underbrace{\color{green} \mathbb{P}r(E \mid H) \mathbb{P}r(H) + \mathbb{P}r(E \mid H^c) \mathbb{P}r(H^c)  }_{\text{Marginal Evidence}}}}
 \end{aligned}
 $$
 
+- where:
+  - $\H$ is the **hypothesis** we are testing.
+  - $\E$ is the **evidence** or data we have observed.
+
+For the last step we used the law of total probability to expand the denominator using a partition of the sample space into two mutually exclusive events $H$ and $H^c$ (the complement of $H$).
+
+
+::: {.callout-caution}
+### Overthinking Mutually Exclusive Hypotheses {.unnumbered}
+
+Note: though that classical Hypothesis testing is flawed in the sense that we don't usualy get to pose Hypotheses in a way that is Mutually Exclusive as stated above. We typically have a null hypothesis that posits that there is no effect (i.i.e. the intervention has had no effect) which we wish to reject in lue of the alternative hypothesis that posits that there is an effect (i.e. the intervention has had an effect). This are mutually exclusive statements. 
+
+However we usually formulate our our hypothesis more narrowly, lets consider hypotension tratments I.e. 
+- H_0 - nothing happened despite the intervention,
+- H_1 - the placebo had minimal effect. 
+- H_2 - Drug A reduces blood pressure more than the placebo,
+- H_3 - Drug B reduces blood pressure more than Drug A, 
+- H_4 - Vegan diet reduces blood pressure,
+- H_5 - Weight loss diet reduces blood pressure,
+- H_6 - Aerobics exercise reduces blood pressure,
+- H_7 - Anaerobic exercise reduces blood pressure,
+
+Yet there are many more hypotheses we can test, including combinations of these hypotheses. However we may not be able to state them as mutually exclusive events and so we may not be able to use Bayes' theorem as stated above.
+:::
+
+  
 We can extend Bayes theorem to cases with multiple mutually exclusive events:
 
 ![mutually exclusive events](images/total-probability.jpg){#fig-mutually-exclusive-events .column-margin width="53mm"}
@@ -213,11 +251,11 @@ $$
 $$
 
 $$
-{\color{orange} P (\text{H} \mid \text{E})} = \frac {{\color{red} \mathbb{P}r(\text{H})} \times {\color{blue}\mathbb{P}r(\text{E} \mid \text{H})}} {\color{gray} {\mathbb{P}r(\text{E})}}
+{\color{orange} \mathbb{P}r  (\text{H} \mid \text{E})} = \frac {{\color{red} \mathbb{P}r(\text{H})} \times {\color{blue}\mathbb{P}r(\text{E} \mid \text{H})}} {\color{gray} {\mathbb{P}r(\text{E})}}
 $$
 
 $$
-{\color{orange} \overbrace{\color{orange} P (\text{Unknown} \mid \text{Data})}^{\text{Posterior}}} = \frac {{\color{red} \overbrace{\color{red} P (\text{Unknown})}^{\text{Prior}}} \times {\color{blue} \overbrace{\color{blue} P (\text{Data} \mid \text{Unknown})}^{\text{Likelihood}}}} {{\color{green} \underbrace{{\color{green} \mathbb{P}r(\text{E})}}_{\text{Average likelihood}}}}
+{\color{orange} \overbrace{\color{orange} \mathbb{P}r (\text{Unknown} \mid \text{Data})}^{\text{Posterior}}} = \frac {{\color{red} \overbrace{\color{red} \mathbb{P}r  (\text{Unknown})}^{\text{Prior}}} \times {\color{blue} \overbrace{\color{blue} \mathbb{P}r  (\text{Data} \mid \text{Unknown})}^{\text{Likelihood}}}} {{\color{green} \underbrace{{\color{green} \mathbb{P}r(\text{E})}}_{\text{Average likelihood}}}}
 $$
 
 The following is a video explaining Bayes law.
