--- a/C1-L02.qmd
+++ b/C1-L02.qmd
@@ -211,9 +211,10 @@ For the last step we used the law of total probability to expand the denominator
 ::: {.callout-caution}
 ### Overthinking Mutually Exclusive Hypotheses {.unnumbered}
 
-Note: though that classical Hypothesis testing is flawed in the sense that we don't usualy get to pose Hypotheses in a way that is Mutually Exclusive as stated above. We typically have a null hypothesis that posits that there is no effect (i.i.e. the intervention has had no effect) which we wish to reject in lue of the alternative hypothesis that posits that there is an effect (i.e. the intervention has had an effect). This are mutually exclusive statements. 
+Note: though that classical Hypothesis testing is flawed in the sense that we don't usually get to pose Hypotheses in a way that is Mutually Exclusive as stated above. We typically have a null hypothesis that posits that there is no effect (i.i.e. the intervention has had no effect) which we wish to reject in lue of the alternative hypothesis that posits that there is an effect (i.e. the intervention has had an effect). This are mutually exclusive statements.
 
-However we usually formulate our our hypothesis more narrowly, lets consider hypotension tratments I.e. 
+However we usually formulate our our hypothesis more narrowly, lets consider hypotension treatments
+
 - H_0 - nothing happened despite the intervention,
 - H_1 - the placebo had minimal effect. 
 - H_2 - Drug A reduces blood pressure more than the placebo,
