--- a/C1-L02.qmd
+++ b/C1-L02.qmd
@@ -202,8 +202,8 @@ $$
 $$
 
 - where:
-  - $\H$ is the **hypothesis** we are testing.
-  - $\E$ is the **evidence** or data we have observed.
+  - $H$ is the **hypothesis** we are testing.
+  - $E$ is the **evidence** or data we have observed.
 
 For the last step we used the law of total probability to expand the denominator using a partition of the sample space into two mutually exclusive events $H$ and $H^c$ (the complement of $H$).
 
